--- a/index.html
+++ b/index.html
@@ -9,20 +9,41 @@
     <title>Home work#9</title>
 </head>
 <body>
-    <div class="sports">
-        <img 
-        srcset=""
-        src="" 
-        alt="">
-        <h3>Get a personalized football experience tailored just for you</h3>
-        <p>Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
-        <img
-        srcset=""
-        src="" alt="">
-        <img
-        srcset=""
-        src="" 
-        alt="">
+    <!------ Section1 ------>
+    <div class="content1">
+        <div class="sports">
+            <img src="./stylesheet.css/images/LOGO (2).png" alt="football logo" srcset="">
+            <h3>Get a personalized football experience tailored just for you</h3>
+            <p>Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
+            <div class="img-cont1">
+            <img class="app-img" src="./stylesheet.css/images/Apple Store.png" alt="app store">
+            <img class="google-img" src="./stylesheet.css./images/Google Play.png" alt="google play">
+        </div>
+        </div>
+
+        <div class="sports-images">
+            <img src="./stylesheet.css/images/Group 10.png" alt="phones">
+        </div>
     </div>
+
+
+    <!------ Section2 ------>
+    <div class="content2">
+        <div class="content2-img">
+            <img class="bg-img" src="./stylesheet.css./images/Rectangle.png" alt="footbolists">
+            <img class="teams-logo" src="./stylesheet.css./images/SAMPLE01.png" alt="logo of football teams">
+            <img class="fotball-video" src="./stylesheet.css./images/SAMPLE02.png" alt="football play">
+        </div>
+
+        <div class="experience">
+            <h4>WHAT IT DOES</h4>
+            <h3></h3>
+            <p>The Guardian Live Scores app is your go to app for live scores and watching Premier League goals… Get in there, what a result!
+            <br>
+            As well as videos of all the goals, you can watch match highlights, check out the latest scores and results and stay bang-up-to-date with the big football stories from The Guardian publication.</p>
+            <a href="./index.html">Learn more</a>
+        </div>
+    </div>
+
 </body>
 </html>
