--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
     <!------ Section2 ------>
     <div class="content2">
         <div class="content2-img">
-            <img class="bg-img" src="./stylesheet.css./images/Rectangle.png" alt="footbolists">
-            <img class="teams-logo" src="./stylesheet.css./images/SAMPLE01.png" alt="logo of football teams">
-            <img class="fotball-video" src="./stylesheet.css./images/SAMPLE02.png" alt="football play">
+            <!-- <img class="bg-img" src="./stylesheet.css./images/Rectangle.png" alt="footbolists"> -->
+            <img src="./stylesheet.css/images/Group 695.png" alt="logo of football teams">
         </div>
 
         <div class="experience">
             <h4>WHAT IT DOES</h4>
-            <h3></h3>
+            <h3>An Enhanced Football Experience</h3>
             <p>The Guardian Live Scores app is your go to app for live scores and watching Premier League goals… Get in there, what a result!
-            <br>
+            <br><br>
             As well as videos of all the goals, you can watch match highlights, check out the latest scores and results and stay bang-up-to-date with the big football stories from The Guardian publication.</p>
             <a href="./index.html">Learn more</a>
         </div>
