--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!------ Section1 ------>
     <div class="content1">
         <div class="sports">
-            <img src="./stylesheet.css/images/LOGO (2).png" alt="football logo" srcset="">
+            <img class="logo-img" class="logo-img" src="./stylesheet.css/images/LOGO (2).png" alt="football logo">
             <h3>Get a personalized football experience tailored just for you</h3>
             <p>Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
             <div class="img-cont1">
