--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <!------ Section2 ------>
     <div class="content2">
         <div class="content2-img">
-            <!-- <img class="bg-img" src="./stylesheet.css./images/Rectangle.png" alt="footbolists"> -->
             <img src="./stylesheet.css/images/Group 695.png" alt="logo of football teams">
         </div>
 
@@ -41,6 +40,22 @@
             <br><br>
             As well as videos of all the goals, you can watch match highlights, check out the latest scores and results and stay bang-up-to-date with the big football stories from The Guardian publication.</p>
             <a href="./index.html">Learn more</a>
+        </div>
+    </div>
+
+    <!------ Section3 ------>
+    <div class="content3">
+        <div class="experience">
+            <h4>GET STARTED</h4>
+            <h3>User-friendly Interface</h3>
+            <p>The in-game goal clips from every Premier League match are available to Guardian TV customers with a Guardian subscription.
+            <br><br>
+            So, if you’re not a subscriber, now’s the time to make that savvy call. If that’s a step too far for you, you can still watch loads of firecracker Premier League action as long as you sign in with a free Guardian iD.</p>
+            <a href="./index.html">Learn more</a>
+        </div>
+
+        <div class="content3-img">
+            <img src="./stylesheet.css/images/new1.png" alt="phone">
         </div>
     </div>
 
