--- a/index.html
+++ b/index.html
@@ -59,5 +59,47 @@
         </div>
     </div>
 
+    <!------ Section4 ------>
+    <div class="content4">
+        <h3>Features That Will Tailor Your Experience</h3>
+        <div class="content">
+            <div>
+                <img src="" alt="">
+                <p>• Video highlights for every Premier League and English Football League game</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• Notifications for your teams, including in-game goal clips and Premier League match highlights for Sky TV subscribers with Guardian.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• Brand new video section including dedicated areas for your chosen team, trending video, Premier League, Football league and other major leagues</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• Match pages showing live scores, commentary, team line-ups and enhanced match stats to keep you up-to-date on all the action</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• The new picture in picture video mode means you can watch goals, manager interviews and more whilst using other areas of the app – so you don’t need to miss any of the action</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• Live updated league tables including all the domestic, European and major leagues and tournaments</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• The Guardian News Vidiprinter. Follow the goals as they go in with our new and improved Vidiprinter</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• Match reports, previews and a dedicated news section</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>• And you can achieve super-fan status by personalising your home page with up-to-the-minute information on your team.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
