--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
             <div class="slider"><img src="./stylesheet.css/images/Group 715.png" alt="slider"></div>
     </div>
 
+    <!------ Section6 ------>
+    <div class="content6">
+        <h3>We have been featured in</h3>
+
+        <div class="content6img">
+            <img src="./stylesheet.css/images/Group (1).png" alt="company logo">
+            <img src="./stylesheet.css/images/Vector (3).png" alt="company logo">
+            <img src="./stylesheet.css/images/Group (2).png" alt="company logo">
+            <img src="./stylesheet.css/images/Group (3).png" alt="company logo">
+            <img src="./stylesheet.css/images/designer-news.png" alt="company logo">
+            <img src="./stylesheet.css/images/sky-sports-1.png" alt="company logo">
+        </div>
+    </div>
 
 
 
