--- a/index.html
+++ b/index.html
@@ -148,18 +148,13 @@
         </div>
     </div>
 
-
-
-
-
-
      <!------ Section7 ------>
-     <!-- <div class="content1">
-        <div class="sports-images">
+     <div class="content7">
+        <div class="content7-images">
             <img src="./stylesheet.css/images/Group 692.png" alt="phones">
         </div>
 
-        <div class="sports">
+        <div class="content7-text">
             <h3>Get Up Close With Your Team</h3>
             <p>If you’re interested in the scores of more than one team (it’s OK, we won’t tell your mates you support two clubs!), you can choose the scores and competitions that matter to you using the ‘My Scores’ section. So, make sure you’re a top-flight football fan by downloading the Football Score Centre now. It’s got all this:</p>
             <div class="img-cont1">
@@ -167,6 +162,6 @@
             <img class="google-img" src="./stylesheet.css./images/Google Play.png" alt="google play">
         </div>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
