--- a/index.html
+++ b/index.html
@@ -163,5 +163,25 @@
         </div>
         </div>
     </div>
+
+    <!------ Section8 ------>
+    <div class="content8">
+        <div class="content8-logo">
+            <img src="./stylesheet.css/images/Group (5).png" alt="logo">
+        </div>
+
+        <div class="nav">
+            <a>Download</a>
+            <a>Support</a>
+            <a>Developers</a>
+            <a>Privacy</a>
+        </div>
+
+        <div class="media">
+            <img src="./stylesheet.css/images/Group (4).png" alt="twiter">
+            <img src="./stylesheet.css/images/facebook 2.png" alt="facebook">
+            <img src="./stylesheet.css/images/instagram 2.png" alt="instagram ">
+        </div>
+    </div>
 </body>
 </html>
