--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
             <div class="img-cont1">
             <img class="app-img" src="./stylesheet.css/images/Apple Store.png" alt="app store">
-            <img class="google-img" src="./stylesheet.css./images/Google Play.png" alt="google play">
+            <img class="google-img" src="./stylesheet.css/images/Google Play (1).png" alt="google play">
         </div>
         </div>
 
@@ -159,7 +159,7 @@
             <p>If you’re interested in the scores of more than one team (it’s OK, we won’t tell your mates you support two clubs!), you can choose the scores and competitions that matter to you using the ‘My Scores’ section. So, make sure you’re a top-flight football fan by downloading the Football Score Centre now. It’s got all this:</p>
             <div class="img-cont1">
             <img class="app-img" src="./stylesheet.css/images/Apple Store.png" alt="app store">
-            <img class="google-img" src="./stylesheet.css./images/Google Play.png" alt="google play">
+            <img class="google-img" src="./stylesheet.css/images/Google Play (1).png" alt="google play">
         </div>
         </div>
     </div>
